--- a/crm/templates/crm/crm_lead_new_form.html
+++ b/crm/templates/crm/crm_lead_new_form.html
@@ -4,7 +4,7 @@
   <head>
   	{% load static %}
     <meta charset="utf-8">
-    <title>Customer: {{ customer_obj.name }}</title>
+    <title>New lead</title>
 	<link rel="shortcut icon" type="image/png" href="{% static 'index/images/favicon.png' %}"/>
     <!-- Page styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="{% static 'index/css/material_design.css' %}">
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link href="{% static 'index/css/form_view_style.css' %}" rel="stylesheet" type="text/css" />
-    <script src="{% static 'index/js/form_view_js.js' %}" type="text/javascript" ></script>
+    <script src="{% static 'index/js/create_form_view.js' %}" type="text/javascript" ></script>
    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
 
     <style>
@@ -56,7 +56,7 @@
               </button>
               <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
        				 for="crm-menu-lower">
-     			<li class="mdl-menu__item"><a href="{% url 'base:customer_list_view' %}" style="text-decoration:none;font-size:18px;">Customer</a></li>
+     			 <li class="mdl-menu__item"><a href="{% url 'base:customer_list_view' %}" style="text-decoration:none;font-size:18px;">Customer</a></li>
       			<li class="mdl-menu__item"><a href="{% url 'base:company_list_view' %}" style="text-decoration:none;font-size:18px;">Company</a></li>
       			<li disabled class="mdl-menu__item">Disabled Action</li>
       			<li class="mdl-menu__item">Yet Another Action</li>
@@ -76,8 +76,10 @@
             <i class="material-icons">more_vert</i>
           </button>
           <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
-            <li class="mdl-menu__item">About</li>
-            <li class="mdl-menu__item">Administrator</li>
+            <li class="mdl-menu__item">5.0 Lollipop</li>
+            <li class="mdl-menu__item">4.4 KitKat</li>
+            <li disabled class="mdl-menu__item">4.3 Jelly Bean</li>
+            <li class="mdl-menu__item">Android History</li>
           </ul>
         </div>
       </div>
@@ -119,79 +121,82 @@
       <div class="erp-content mdl-layout__content">
         
         	<div class="form-button-group">
-      <button class="btn-edit mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Edit</button>
-      <button class="btn-save mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" style="display: none">Save</button>
-      <button class="btn-dlt mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect"><a href="{% url 'base:delete_customer' customer_obj.id %}" style="color: white;text-decoration: none;">Delete</a></button>
-      <button class="btn-prnt mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Print</button>
+      <button class="btn-create-save mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">Save</button>
     </div>
     <div class="view-btn-group">
         <button class="list-view-button">
         	<a href="{% url 'base:customer_list_view' %}">
         	<i class="material-icons">list</i>
-        </button>
-        <button class="list-view-button btn-pos">
-        	<a href="{% url 'base:customer_form_view' customer_obj.id %}">
-        	<i class="material-icons">edit</i>
         	</a>
         </button>
     </div>
       <div class="form-style-5">
-      <form action="{% url 'base:edit_customer' customer_obj.id %}" method="post" id="form-jq">
+      <form action="{% url 'base:create_new_customer' %}" method="post" id="form-jq">
         {% csrf_token %}
         <fieldset>
-          <legend><span class="number">1</span> Customer Info</legend>
+          <legend><span class="number">1</span> Lead Info</legend>
           <label for="customer_name">Name *</label>
-          <input type="text" name="customer_name" class="input-js" value="{{ customer_obj.name }}" placeholder="Name *" readonly="readonly"/>
+          <input type="text" name="customer_name" class="input-js" placeholder="Name *" readonly="readonly"/>
           <label for="is_company" style="margin-top: -16px; margin-bottom: 15px;">Is a company?
-            <input id="checkbox-onchange-jq" type="checkbox" name="is_company" {% if customer_obj.is_company %} value="True" {% else %} value="False" {% endif %} placeholder="Is company"/>
+            <input id="checkbox-onchange-jq" type="checkbox" name="is_company"  placeholder="Is company"/>
           </label>
-          <div class="onchange-field" style="display:none;">
+          <div class="onchange-field">
             <label for="customer_company">Company</label>
-            <select id="comapany" name="customer_company" placeholder="Company" disabled="disabled">
+            <select id="comapany" name="customer_company" placeholder="Comapny" disabled="disabled">
               <option value="none">Select company</option>
               {% for company in companies %}
-                <option value="{{ company.id }}" {% if company == customer_obj.company %} selected="selected" {% endif %}>{{ company }}</option>
+                <option value="{{ company.id }}">{{ company }}</option>
                 {% endfor %}
             </select>
           </div>
           <label for="customer_email">Email</label>
-          <input type="email" name="customer_email" value="{{ customer_obj.email }}" placeholder="Email" readonly="readonly" />
+          <input type="email" name="customer_email"  placeholder="Email" readonly="readonly" />
           <label for="customer_mobile">Mobile</label>
-          <input type="number" name="customer_mobile" value="{{ customer_obj.mobile }}" placeholder="Mobile" readonly="readonly"/>
+          <input type="number" name="customer_mobile"  placeholder="Mobile" readonly="readonly"/>
           <label for="customer_street">Lane</label>
-          <input type="text" name="customer_street" value="{{ customer_obj.street }}" placeholder="Lane" readonly="readonly" />
+          <input type="text" name="customer_street" placeholder="Lane" readonly="readonly" />
           <label for="customer_street2">Street</label>
-          <input type="text" name="customer_street2" value="{{ customer_obj.street2 }}" placeholder="Street" readonly="readonly" />
+          <input type="text" name="customer_street2" placeholder="Street" readonly="readonly" />
           <label for="customer_city">City</label>
-          <input type="text" name="customer_city" value="{{ customer_obj.city }}" placeholder="City" readonly="readonly" />
+          <input type="text" name="customer_city" placeholder="City" readonly="readonly" />
           <label for="customer_state">State</label>
           <select id="state" name="customer_state" placeholder="State" disabled="disabled" >
             <option value="none">Select state</option>
             {% for state in  states %}
-              <option value="{{ state.id }}" {% if state == customer_obj.state %} selected="selected" {% endif %}>{{ state }}</option>
+              <option value="{{ state.id }}">{{ state }}</option>
             {% endfor %}
           </select>
           <label for="customer_country">Country</label>
           <select id="country" name="customer_country" placeholder="Country" disabled="disabled">
             <option value="none">Select country</option>
             {% for country in  countries %}
-              <option value="{{ country.id }}" {% if country == customer_obj.country %} selected="selected" {% endif %}>{{ country }}</option>
+              <option value="{{ country.id }}">{{ country }}</option>
             {% endfor %}
           </select>
         </fieldset>
         <fieldset>
-          <legend><span class="number">2</span> Additional Info</legend>
+          <legend><span class="number">2</span> Product Info</legend>
+          <label for="customer_product">Product</label>
+          <select id="prod" name="customer_product">
+            <option value="football">Football</option>
+            <option value="swimming">Swimming</option>
+            <option value="fishing">Fishing</option>
+            <option value="climbing">Climbing</option>
+          <select>
+        </fieldset>
+        <fieldset>
+          <legend><span class="number">3</span> Additional Info</legend>
           <label for="customer_note">Note</label>
-          <textarea name="customer_note" placeholder="About customer">{{ customer_obj.note }}</textarea>
+          <textarea name="customer_note" placeholder="About customer"></textarea>
         </fieldset>
         <input type="submit" class="submit-jq mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" value="Save"/>
       </form>
     </div>
-   </div>
    <footer class="erp-footer mdl-mega-footer">
      <div>Made with Love by Akhil Mathew</div>     
    </footer>
   </div>
+ </div> 
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
