--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -60,7 +60,7 @@
           <!-- Navigation -->
           <div class="erp-navigation-container">
             <nav class="erp-navigation mdl-navigation">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{% url 'home' %}">Home</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{% url 'index:home' %}">Home</a>
               <button class="mdl-navigation__link mdl-typography--text-uppercase mdl-button mdl-js-button" id="crm-menu-lower">
               	CRM
               </button>
