--- a/crm/templates/crm/crm_lead_form_view.html
+++ b/crm/templates/crm/crm_lead_form_view.html
@@ -4,7 +4,7 @@
   <head>
   	{% load static %}
     <meta charset="utf-8">
-    <title>Lead:{{ lead.subject }}</title>
+    <title>Lead: {{ lead.subject }}</title>
 	<link rel="shortcut icon" type="image/png" href="{% static 'index/images/favicon.png' %}"/>
     <!-- Page styles -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -13,8 +13,8 @@
     <link rel="stylesheet" href="{% static 'index/css/material_design.css' %}">
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <link href="{% static 'index/css/form_view_style.css' %}" rel="stylesheet" type="text/css" />
-    <script src="{% static 'index/js/form_view_js.js' %}" type="text/javascript" ></script>
-   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <script src="{% static 'crm/js/crm_form_view_js.js' %}" type="text/javascript" ></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
 
     <style>
     #view-source {
@@ -186,9 +186,14 @@
           <select>
         </fieldset>
         <fieldset>
-          <legend><span class="number">3</span> Additional Info</legend>
-          <label for="customer_note">Note</label>
-          <textarea name="customer_note" placeholder="About customer">{{ customer_obj.note }}</textarea>
+          <legend><span class="number">3</span> Sales Info</legend>
+          <label for="sales_person">Sales Person</label>
+          <select id="sales_person" name="sales_person" placeholder="Sales person" disabled="disabled">
+            <option value="none">Select sales person</option>
+            {% for person in  sales_persons %}
+              <option value="{{ person.id }}" {% if person == lead.sales_person %} selected="selected" {% endif %}>{{ person }}</option>
+            {% endfor %}
+          </select>
         </fieldset>
         <input type="submit" class="submit-jq mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect" value="Save"/>
       </form>
