--- a/crm/templates/crm/crm_lead_list.html
+++ b/crm/templates/crm/crm_lead_list.html
@@ -155,6 +155,7 @@
                 <th class="mdl-data-table__cell--non-numeric">Stage</th>
                 <th class="mdl-data-table__cell--non-numeric">Priority</th>
                 <th class="mdl-data-table__cell--non-numeric">Mobile</th>
+                <th class="mdl-data-table__cell--non-numeric">Sales Person</th>
             </tr>
       	  </thead>
           <tbody>
@@ -166,6 +167,7 @@
                     <td class="mdl-data-table__cell--non-numeric" style="color: cornflowerblue;">{{ lead.stage }}</td>
                     <td class="mdl-data-table__cell--non-numeric" style="color: cornflowerblue;">{{ lead.priority }}</td>
                     <td class="mdl-data-table__cell--non-numeric" style="color: cornflowerblue;">{{ lead.mobile }}</td>
+                    <td class="mdl-data-table__cell--non-numeric" style="color: cornflowerblue;">{{ lead.sales_person }}</td>
                   </tr>
                 {% endfor %}
              {% else %}
