--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -49,14 +49,14 @@
           </span>
           <!-- Add spacer, to align navigation to the right in desktop -->
           <div class="erp-header-spacer mdl-layout-spacer"></div>
-          <div class="erp-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
+          <!-- <div class="erp-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
             <label class="mdl-button mdl-js-button mdl-button--icon" for="search-field">
               <i class="material-icons">search</i>
             </label>
             <div class="mdl-textfield__expandable-holder">
               <input class="mdl-textfield__input" type="text" id="search-field">
             </div>
-          </div>
+          </div> -->
           <!-- Navigation -->
           <div class="erp-navigation-container">
             <nav class="erp-navigation mdl-navigation">
@@ -89,14 +89,24 @@
           <span class="erp-mobile-title mdl-layout-title">
             <img class="erp-logo-image" src="{% static 'index/images/bizlogo.png' %}">
           </span>
+          <style>.material-icons.md-25 { font-size: 25px; }</style>
           <button class="erp-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
-            <i class="material-icons">more_vert</i>
+            <i class="material-icons md-25">account_circle</i>
           </button>
+          
           <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
-            <li class="mdl-menu__item">User</li>
-            <li class="mdl-menu__item">Administrator</li>
-            <li disabled class="mdl-menu__item">Developer Mode</li>
-            <li class="mdl-menu__item">User Info</li>
+            {% if request.user.is_authenticated %}
+            	<li class="mdl-menu__item">
+            		{% if request.user.first_name %}
+            			{{ request.user.first_name }} {{request.user.last_name}}
+            		{% else %}
+            			{{ request.user.username }}	
+            		{% endif %}	
+            	</li>
+            	<a href="{% url 'index:logout' %}"><li class="mdl-menu__item">Log Out</li></a>
+            {% else %}
+            	<a href="{% url 'index:login' %}"><li class="mdl-menu__item">Login</li></a>
+            {% endif %}
           </ul>
         </div>
       </div>
