--- a/index/templates/index/FormView.html
+++ b/index/templates/index/FormView.html
@@ -1,10 +1,138 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
-</head>
-<body>
+<!doctype html>
 
-</body>
+<html lang="en">
+  <head>
+  	{% load static %}
+    <meta charset="utf-8">
+    {% block form_title %}<!-- Title block -->{% endblock %}
+	<link rel="shortcut icon" type="image/png" href="{% static 'index/images/favicon.png' %}"/>
+	
+	<!-- jQuery Load -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+	<!-- jQuery Load -->
+    
+    <!-- Common styles -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en"/>
+    <link rel="stylesheet" href="{% static 'index/css/material_design.css' %}"/>
+    <!-- Common styles -->
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.min.css"/>
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <link href="{% static 'index/css/form_view_style.css' %}" rel="stylesheet" type="text/css" />
+    <script src="{% static 'index/js/form_view_js.js' %}" type="text/javascript" ></script>
+    {% block form_style_js %} {% endblock %}
+	<!-- Common Style -->
+    <style>
+    #view-source {
+      position: fixed;
+      display: block;
+      right: 0;
+      bottom: 0;
+      margin-right: 40px;
+      margin-bottom: 40px;
+      z-index: 900;
+    }
+    </style>
+  </head>
+  <body>
+  	
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+
+      <div class="erp-header mdl-layout__header mdl-layout__header--waterfall">
+        <div class="mdl-layout__header-row">
+          <span class="erp-title mdl-layout-title">
+            <img class="erp-logo-image" src="{% static 'index/images/bizlogo.png' %}">
+          </span>
+          <!-- Add spacer, to align navigation to the right in desktop -->
+          <div class="erp-header-spacer mdl-layout-spacer"></div>
+          <div class="erp-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
+            <label class="mdl-button mdl-js-button mdl-button--icon" for="search-field">
+              <i class="material-icons">search</i>
+            </label>
+            <div class="mdl-textfield__expandable-holder">
+              <input class="mdl-textfield__input" type="text" id="search-field">
+            </div>
+          </div>
+          <!-- Navigation -->
+          <div class="erp-navigation-container">
+            <nav class="erp-navigation mdl-navigation">
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{% url 'index:home' %}">Home</a>
+              <button class="mdl-navigation__link mdl-typography--text-uppercase mdl-button mdl-js-button" id="crm-menu-lower">
+              	CRM
+              </button>
+              <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect"
+       				 for="crm-menu-lower">
+     			<li class="mdl-menu__item"><a href="{% url 'base:customer_list_view' %}" style="text-decoration:none;font-size:18px;">Customer</a></li>
+      			<li class="mdl-menu__item"><a href="{% url 'base:company_list_view' %}" style="text-decoration:none;font-size:18px;">Company</a></li>
+      			<li disabled class="mdl-menu__item">Disabled Action</li>
+      			<li class="mdl-menu__item">Yet Another Action</li>
+    		  </ul>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Tablets</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Wear</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">TV</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Auto</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">One</a>
+              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Play</a>
+            </nav>
+          </div>
+          <span class="erp-mobile-title mdl-layout-title">
+            <img class="erp-logo-image" src="{% static 'index/images/bizlogo.png' %}">
+          </span>
+          <button class="erp-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
+            <i class="material-icons">more_vert</i>
+          </button>
+          <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
+            <li class="mdl-menu__item">About</li>
+            <li class="mdl-menu__item">Administrator</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="erp-drawer mdl-layout__drawer">
+        <span class="mdl-layout-title">
+          <img class="erp-logo-image" src="{% static 'index/images/bizerplogo.png' %}">
+        </span>
+        <nav class="mdl-navigation">
+          <button class="mdl-navigation__link mdl-typography--text-uppercase mdl-button mdl-js-button" id="crm-menu-lower">
+              	CRM
+          </button>
+          <a class="mdl-navigation__link" href="">CRM</a>
+          <a class="mdl-navigation__link" href="">Tablets</a>
+          <a class="mdl-navigation__link" href="">Wear</a>
+          <a class="mdl-navigation__link" href="">TV</a>
+          <a class="mdl-navigation__link" href="">Auto</a>
+          <a class="mdl-navigation__link" href="">One</a>
+          <a class="mdl-navigation__link" href="">Play</a>
+          <div class="erp-drawer-separator"></div>
+          <span class="mdl-navigation__link" href="">Versions</span>
+          <a class="mdl-navigation__link" href="">Lollipop 5.0</a>
+          <a class="mdl-navigation__link" href="">KitKat 4.4</a>
+          <a class="mdl-navigation__link" href="">Jelly Bean 4.3</a>
+          <a class="mdl-navigation__link" href="">Android history</a>
+          <div class="erp-drawer-separator"></div>
+          <span class="mdl-navigation__link" href="">Resources</span>
+          <a class="mdl-navigation__link" href="">Official blog</a>
+          <a class="mdl-navigation__link" href="">Android on Google+</a>
+          <a class="mdl-navigation__link" href="">Android on Twitter</a>
+          <div class="erp-drawer-separator"></div>
+          <span class="mdl-navigation__link" href="">For developers</span>
+          <a class="mdl-navigation__link" href="">App developer resources</a>
+          <a class="mdl-navigation__link" href="">Android Open Source Project</a>
+          <a class="mdl-navigation__link" href="">Android SDK</a>
+        </nav>
+      </div>
+
+      <div class="erp-content mdl-layout__content">
+        	{% block form_section %}
+        	{% endblock %}
+      </div>
+   <footer class="erp-footer mdl-mega-footer">
+     <div>Made with Love by Akhil Mathew</div>     
+   </footer>
+  </div>
+    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  </body>
 </html>
+
+
+
