--- a/index/static/index/css/material_design.css
+++ b/index/static/index/css/material_design.css
@@ -67,7 +67,7 @@ a img{
   }
 
   .erp-header .mdl-navigation__link {
-    color: #757575;
+    color: black;
     font-weight: 700;
     font-size: 14px;
   }
