--- a/index/templates/index/index.html
+++ b/index/templates/index/index.html
@@ -42,106 +42,8 @@
   	
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
-      <div class="erp-header mdl-layout__header mdl-layout__header--waterfall">
-        <div class="mdl-layout__header-row erp-nav-bar">
-          <span class="erp-title mdl-layout-title">
-            <img class="erp-logo-image" src="{% static 'index/images/bizlogo.png' %}">
-          </span>
-          <!-- Add spacer, to align navigation to the right in desktop -->
-          <div class="erp-header-spacer mdl-layout-spacer"></div>
-          <!-- <div class="erp-search-box mdl-textfield mdl-js-textfield mdl-textfield--expandable mdl-textfield--floating-label mdl-textfield--align-right mdl-textfield--full-width">
-            <label class="mdl-button mdl-js-button mdl-button--icon" for="search-field">
-              <i class="material-icons">search</i>
-            </label>
-            <div class="mdl-textfield__expandable-holder">
-              <input class="mdl-textfield__input" type="text" id="search-field">
-            </div>
-          </div> -->
-          <!-- Navigation -->
-          <div class="erp-navigation-container">
-            <nav class="erp-navigation mdl-navigation">
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="{% url 'index:home' %}">Home</a>
-              <button class="mdl-navigation__link mdl-typography--text-uppercase mdl-button mdl-js-button" id="crm-menu-lower">
-              	Sales
-              </button>
-              <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="crm-menu-lower">
-     			<li class="mdl-menu__item"><a href="{% url 'base:customer_list_view' %}" style="text-decoration:none;font-size:18px;">Customer</a></li>
-      			<li class="mdl-menu__item"><a href="{% url 'crm:leads_list_view' %}" style="text-decoration:none;font-size:18px;">Leads</a></li>
-      			<li class="mdl-menu__item"><a href="{% url 'crm:leads_list_view' %}" style="text-decoration:none;font-size:18px;">Products</a></li>
-      			<li disabled class="mdl-menu__item">Disabled Action</li>
-      			<li class="mdl-menu__item">Yet Another Action</li>
-    		  </ul>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Accounting</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Purchase</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Project</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Warehouse</a>
-              <a class="mdl-navigation__link mdl-typography--text-uppercase" href="">HRMS</a>
-              <button class="mdl-navigation__link mdl-typography--text-uppercase mdl-button mdl-js-button" id="settings-menu-lower">
-              	Settings
-              </button>
-              <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="settings-menu-lower">
-      			<li class="mdl-menu__item"><a href="{% url 'base:company_list_view' %}" style="text-decoration:none;font-size:18px;">Company</a></li>
-      			<li disabled class="mdl-menu__item">Disabled Action</li>
-      			<li class="mdl-menu__item">Yet Another Action</li>
-    		  </ul>
-            </nav>
-          </div>
-          <span class="erp-mobile-title mdl-layout-title">
-            <img class="erp-logo-image" src="{% static 'index/images/bizlogo.png' %}">
-          </span>
-          <style>.material-icons.md-25 { font-size: 25px; }</style>
-          <button class="erp-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
-            <i class="material-icons md-25">account_circle</i>
-          </button>
-          
-          <ul class="mdl-menu mdl-js-menu mdl-menu--bottom-right mdl-js-ripple-effect" for="more-button">
-            {% if request.user.is_authenticated %}
-            	<li class="mdl-menu__item">
-            		{% if request.user.first_name %}
-            			{{ request.user.first_name }} {{request.user.last_name}}
-            		{% else %}
-            			{{ request.user.username }}	
-            		{% endif %}	
-            	</li>
-            	<a href="{% url 'index:logout' %}"><li class="mdl-menu__item">Log Out</li></a>
-            {% else %}
-            	<a href="{% url 'index:login' %}"><li class="mdl-menu__item">Login</li></a>
-            {% endif %}
-          </ul>
-        </div>
-      </div>
-
-      <div class="erp-drawer mdl-layout__drawer">
-        <span class="mdl-layout-title">
-          <img class="erp-logo-image" src="{% static 'index/images/bizlogo.png' %}">
-        </span>
-        <nav class="mdl-navigation">
-          <a class="mdl-navigation__link" href="">CRM</a>
-          <a class="mdl-navigation__link" href="">Tablets</a>
-          <a class="mdl-navigation__link" href="">Wear</a>
-          <a class="mdl-navigation__link" href="">TV</a>
-          <a class="mdl-navigation__link" href="">Auto</a>
-          <a class="mdl-navigation__link" href="">One</a>
-          <a class="mdl-navigation__link" href="">Play</a>
-          <div class="erp-drawer-separator"></div>
-          <span class="mdl-navigation__link" href="">Versions</span>
-          <a class="mdl-navigation__link" href="">Lollipop 5.0</a>
-          <a class="mdl-navigation__link" href="">KitKat 4.4</a>
-          <a class="mdl-navigation__link" href="">Jelly Bean 4.3</a>
-          <a class="mdl-navigation__link" href="">Android history</a>
-          <div class="erp-drawer-separator"></div>
-          <span class="mdl-navigation__link" href="">Resources</span>
-          <a class="mdl-navigation__link" href="">Official blog</a>
-          <a class="mdl-navigation__link" href="">Android on Google+</a>
-          <a class="mdl-navigation__link" href="">Android on Twitter</a>
-          <div class="erp-drawer-separator"></div>
-          <span class="mdl-navigation__link" href="">For developers</span>
-          <a class="mdl-navigation__link" href="">App developer resources</a>
-          <a class="mdl-navigation__link" href="">Android Open Source Project</a>
-          <a class="mdl-navigation__link" href="">Android SDK</a>
-        </nav>
-      </div>
-
+	  {% include 'index/HeaderFile.html' %}
+	  	  
       <div class="erp-content mdl-layout__content">
         <a name="top"></a>
         <div class="erp-be-together-section mdl-typography--text-center">
